# HML

./: AST.hs  Compiler.hs  Eval.hs  GettingStarted.markdown  HML.cabal  HW3.cabal  HW3.sh  HW4.cabal  HW4.sh  Lex.x  Parse.y  Prelude.hm  Prelude.txt  Primitives.hs  README.md  Test.hs  Typecheck.hs  Typechecker.hs  hm.vim  run.sh
sample-asm/: Makefile
sample-src/: ADTs.txt  Array.txt  ArrayExample.hm  Arrays.hm  BST.hm  BST.txt  Bool.hm  Bool.txt  Error.hm  Existentials.hm  Fact.hm  Fact.txt  FactFib.hm  FactStream.hm  List.hm  List.txt  Malformed.txt  Mergesort.hm  Mergesort.txt  Nat.hm  Ord.hm  Quicksort.hm  Quicksort.txt  SafeArray.hm  Stream.hm  Test.hm
sample-src/error_files/: kind_errors.txt  polymorphism.hm  polymorphism.txt  scope_error1.txt  scope_error2.hm  scope_error2.txt  type_error1.txt  type_error2.hm  type_error3.txt  type_error4.txt
sample-src/uncool_tests/: test0.hm  test1.hm  test2.hm  test3.hm  test4.hm  test5.hm  test6.hm  test7.hm
src/: AST.hs  Compile.hs  Eval.hs  Lex.x  Parse.y  Paths_HML.hs  Paths_HW3.hs  Paths_HW4.hs  Primitives.hs  Test.hs  Typecheck.hs
