name:                HW3
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Ben Sherman
maintainer:          bmsherman@users.noreply.github.com
build-type:          Simple
cabal-version:       >=1.10
data-files:          Prelude.hm
extra-source-files:  sample-src/*.hm sample-src/error_files/*.hm

library
  hs-source-dirs:      src
  exposed-modules:     AST, Compile, Eval, Lex, Parse, Primitives,
                       Test, Typecheck
  build-depends:       base >=4.5 && <4.8,
                       array >=0.4 && <0.6,
                       containers >= 0.4 && <0.6,
                       transformers >= 0.4 && <0.5
  build-tools:         alex, happy
  default-language:    Haskell2010

executable Typecheck
  default-language:    Haskell2010
  main-is:             Typechecker.hs
  build-depends:       base >= 4.5 && <4.8, HW3

executable Compile
  default-language:    Haskell2010
  main-is:             Compiler.hs
  build-depends:       base >= 4.5 && <4.8, HW3, containers >= 0.4 && <0.6
